--- a/index.html
+++ b/index.html
@@ -161,7 +161,59 @@
     display: none; /* Chrome, Safari, Opera */
   }
 
-  @media (max-width:980px){ .root{grid-template-columns:1fr;grid-auto-rows:auto;padding:12px} :root{--mid-w-px:100%} }
+/* -------------------------
+   Mobile / small screens
+   ------------------------- */
+@media (max-width: 980px) {
+  /* Stack columns vertically, reduce paddings */
+  .root {
+    grid-template-columns: 1fr !important;
+    gap: 12px;
+    padding: 12px;
+    overflow-x: hidden; /* prevent the whole page from stretching horizontally */
+    height: auto;
+  }
+
+  /* Make cards flow naturally and fill width */
+  .column { height: auto; }
+  .card { padding: 14px; }
+
+  /* Reduce the per-hour pixel width so timeline is not huge on mobile */
+  :root {
+    --hour-px: 44px;   /* smaller hour width on small screens */
+    --date-col: 96px;  /* reduce date column a bit */
+    --left-w-px: auto;
+    --mid-w-px: 100%;
+    --right-w-px: auto;
+  }
+
+  /* Timeline viewport should be a reasonable height (not taller than viewport) */
+  .viewport {
+    max-height: calc(100vh - 220px); /* keep timeline visible but allow the left/add to show above/below */
+    overflow-x: auto;  /* allow horizontal pan inside timeline */
+    overflow-y: auto;
+  }
+
+  /* Prevent inner content forcing the page width — inner can be wide but only scroll inside .viewport */
+  .inner {
+    min-width: 0;      /* allow inner to shrink inside the viewport container */
+    width: auto;
+  }
+
+  /* Make hour labels smaller to fit */
+  .hour { font-size: 11px; padding: 0 4px; }
+
+  /* Reduce big title sizes */
+  .title { font-size: 24px; }
+  .section-title { font-size: 18px; }
+
+  /* Slightly reduce input padding so forms fit better */
+  input, select, textarea { padding:10px 12px; font-size:13px; }
+
+  /* Ensure background doesn't cause horizontal scroll */
+  body { background-position: center top; }
+}
+
 </style>
 </head>
 <body>
